Add method to main activity logInformation()

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,10 @@
         android:layout_height="wrap_content"
         android:text="Button"
         android:onClick="startSql"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button LOG"
+        android:onClick="logInformation"/>
 </RelativeLayout>
